--- a/package.json
+++ b/package.json
@@ -9,21 +9,16 @@
     "plugin"
   ],
   "author": {
-    "name": "Your Name",
-    "email": "you@example.com",
-    "url": "http://example.com"
+    "name": "Jon Udell",
+    "email": "jon@jonudell.info",
+    "url": "http://jonudell.net"
   },
   "contributors": [],
   "scripts": {
-    "test": "mocha"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "grunt": "~0.4",
-    "grunt-contrib-coffee": "~0.12",
-    "grunt-contrib-watch": "~0.6",
-    "mocha": "*",
-    "expect.js": "*",
-    "grunt-mocha-test": "~0.12"
+    "grunt": "~0.4"
   },
   "license": "MIT & GPL",
   "repository": {
